Fix footer layout on smaller screens

--- a/public/themes/default/assets/main.less
+++ b/public/themes/default/assets/main.less
@@ -698,19 +698,22 @@ footer {
     padding-top: 22px;
     padding-bottom: 0;
 
-  p {
-    margin-bottom: 20px;
-  }
+    a:not(:last-child) {
+      margin-right: 10px;
+    }
 
-  a:not(:last-child) {
-    margin-right: 10px;
-  }
-
-    @media (min-width: @screen-md-min) {
-      hr {
-        margin-top: 60px;
+    @media (max-width: @screen-sm-min) {
+      [class*="col-"] {
+        text-align: center;
       }
     }
+
+    @media (min-width: @screen-md-min) {
+      p {
+        margin-bottom: 20px;
+      }
+    }
+
   }
 }
 
